--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.13.9",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "python-shell": "^1.0.6"
   },
   "devDependencies": {
     "eslint": "^4.15.0",
